--- a/ZorkBuilder/ZorkBuilder.Data/ZorkBuilder.Data.csproj
+++ b/ZorkBuilder/ZorkBuilder.Data/ZorkBuilder.Data.csproj
@@ -1,19 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.1.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="Zork.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
