--- a/ZorkBuilder/ZorkBuilder.Forms/ZorkBuilder.Forms.csproj
+++ b/ZorkBuilder/ZorkBuilder.Forms/ZorkBuilder.Forms.csproj
@@ -5,10 +5,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{81467F7F-7B07-4473-85D8-9402FC3BE1BE}</ProjectGuid>
+    <ProjectGuid>{DD6AF027-4960-4CFD-8DE7-E84331F5CFED}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>ZorkBuilder.WinForms</RootNamespace>
-    <AssemblyName>ZorkBuilder.WinForms</AssemblyName>
+    <RootNamespace>ZorkBuilder.Forms</RootNamespace>
+    <AssemblyName>ZorkBuilder.Forms</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ViewModels\WorldViewModel.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +89,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ZorkBuilder.Data\ZorkBuilder.Data.csproj">
+      <Project>{ff599a7c-b0e5-4029-a300-c282025e8cb0}</Project>
+      <Name>ZorkBuilder.Data</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\DataSources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.6.0.0\build\Fody.targets" Condition="Exists('..\packages\Fody.6.0.0\build\Fody.targets')" />
